--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,12 @@
     <title>ShopSmart</title>
   </head>
   <body>
+ 
+
+<script src="https://www.paypal.com/sdk/js?currency=USD"></script>
+   <script
+        src="https://www.paypal.com/sdk/js?client-id=AQ64Bsbd6NGa7eos3hUpqBmfSifGuJmzbMUtsB2FtEwddpr5QXNQ8S7tc5NAVybj0JVQRH1GFXQViQ_u">
+</script>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
